2020-07-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c,
	  src/z80/peeph-ez80_z80.def:
	  Improve use of hl in z80 (and related) register allocation.

2020-07-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/asgb/gbmch.c (minit),
	* sdas/asz80/z80mch.c (minit): set address space to 24 bit
	* sdas/linksrc/lkdata.c,
	* sdas/linksrc/aslink.h: removed packflag
	* sdas/linksrc/lkmain.c: removed packflag and warn on removed -Y option
	* src/ds390/main.c,
	* src/mcs51/main.c: removed --pack-iram, --no-pack-iram
	* src/SDCCglobl.h,
	* src/SDCCmain.c: removed options.no_pack_iram, no -Y output

2020-07-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Enable use of hl in gbz80 register allocation.

2020-07-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c,
	  src/z80/z80.h,
	  src/z80/gen.c,
	  src/z80/ralloc.c,
	  src/z80/ralloc2.cc:
	  Enable some use of hl in gbz80 register allocation.

2020-07-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  support/regression/tests/bug-3087.c,
	  src/z80/gen.c:
	  Fix bug #3087, implement part of RFE #691.

2020-07-17 Sergey Belyashov <sergey.belyashov@gmail.com>

	* device/lib/ez80_z80/memcpy.s,
	  device/lib/ez80_z80/Makefile.in,
	  device/lib/gbz80/memcpy.s,
	  device/lib/gbz80/Makefile.in,
	  device/lib/z180/memcpy.s,
	  device/lib/z180/Makefile.in,
	  device/lib/z80n/memcpy.s,
	  device/lib/z80n/Makefile.in:
	  Implement RFE #664 for ez80_z80, GBZ80, Z180 and Z80N ports

2020-07-17 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c:
	  Implement RFE #636: optimize stack allocation for eZ80

2020-07-17 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/SDCCval.c:
	  Revert unnecessary change.

2020-07-17 Sergey Belyashov <sergey.belyashov@gmail.com>

	* device/lib/z80/Makefile.in,
	  device/lib/z80/__sdcc_bcall.s,
	  src/SDCCval.c,
	  src/z80/gen.c,
	  src/z80/main.c,
	  src/z80/peep.c,
	  src/z80/z80.h: