@@ -1,3 +1,10 @@
+2020-07-20 Sebastian 'basxto' Riedel <sdcc@basxto.de>
+
+	* support/support/makebin.c:
+	  Support IHX record type 0x04 introduced in [r11746].
+	  This is needed for #115.
+
+
 2020-07-19 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/ralloc2.cc,
